Updated project links

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 </div>
                 <div class="project-img">
                     <div class="hover-links">
-                        <a href="#">
+                        <a href="https://github.com/chayannaskar26/Steam-Games_Recommender-System">
                             <i class="fa-brands fa-github"></i>
                             <span>View Code</span>
                         </a>
-                        <a href="#">
+                        <a href="https://steam-games-recommender-system-00b1f6aec3ea.herokuapp.com/">
                             <i class="fa-solid fa-eye"></i>
                             <span>Visit Site</span>
                         </a>
