--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                     <img src="./static/icons/python.svg" alt="Python" title="Python">
                     <img src="./static/icons/pandas.svg" alt="Pandas" title="Pandas">
                     <img src="./static/icons/jupyter.svg" alt="Jupyter" title="Jupyter">
+                    <img src="./static/icons/flask.svg" alt="Flask" title="Flask">
+                </div>
+                <div class="my-20 d-lg-none mobile-links">
+                    <a href="https://github.com/chayannaskar26/Steam-Games_Recommender-System" class="view-code">View Code On Github</a>
+                    <a href="https://steam-games-recommender-system-00b1f6aec3ea.herokuapp.com/" class="view-code">View Code On Github</a>
                 </div>
                 <div class="project-img">
                     <div class="hover-links">
@@ -61,7 +66,7 @@
                     <img src="./static/icons/dplyr.png" alt="dplyr" title="dplyr">
                 </div>
 
-                <a href="" class="view-code">View Code On Github</a>
+                <a href="https://github.com/chayannaskar26/CredX_Acquisition" class="view-code">View Code On Github</a>
             </div>
         </section>
     </main>
