Removed Hosted Text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h3>Steam Games Recommender System</h3>
                 <p>An End to End recommender system for recommending user based on games they search for. This app uses Content Based recommendation techniques to properly recommmend games that are available to purchase from Steam site.</p>
                 <p>The data is self collected using steam api, whose code is also present in Github.</p>
-                <p>This app is hosted on Heroku.</p>
+                <!-- <p>This app is hosted on Heroku.</p> -->
                 <div class="tech-used">
                     <img src="./static/icons/python.svg" alt="Python" title="Python">
                     <img src="./static/icons/pandas.svg" alt="Pandas" title="Pandas">
