Updated with paysim fraud project

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
         <section class="projects">
             <h2>Selected Projects:</h2>
             <hr>
+            <div class="paysim-fraud-analysis my-20">
+                <h3>PaySim Fraud Detection</h3>
+                <p>Built and evaluated machine learning models on the PaySim dataset to detect fraudulent financial transactions.</p>
+                <p>Conducted EDA, feature engineering, and handled class imbalance using Stratified K-Fold and SMOTE.</p>
+                <p>Achieved strong model performance using precision, recall, F1-score, and ROC-AUC as key metrics.</p>
+                <div class="tech-used">
+                    <img src="./static/icons/python.svg" alt="Python" title="Python">
+                    <img src="./static/icons/pandas.svg" alt="Pandas" title="Pandas">
+                    <img src="./static/icons/jupyter.svg" alt="Jupyter" title="Jupyter">
+                    <img src="./static/icons/seaborn.svg" alt="Seaborn" title="Seaborn">
+                </div>
+
+                <a href="https://github.com/chayannaskar26/PaySim-Fraud-Detection" class="view-code">View Code On Github</a>
+            </div>
             <div class="steam-games-recommender my-20 first-item">
                 <h3>Steam Games Recommender System</h3>
                 <p>An End to End recommender system for recommending user based on games they search for. This app uses Content Based recommendation techniques to properly recommmend games that are available to purchase from Steam site.</p>
