css class updates

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="projects">
             <h2>Selected Projects:</h2>
             <hr>
-            <div class="paysim-fraud-analysis my-20">
+            <div class="paysim-fraud-analysis my-20 first-item">
                 <h3>PaySim Fraud Detection</h3>
                 <p>Built and evaluated machine learning models on the PaySim dataset to detect fraudulent financial transactions.</p>
                 <p>Conducted EDA, feature engineering, and handled class imbalance using Stratified K-Fold and SMOTE.</p>
@@ -39,7 +39,7 @@
 
                 <a href="https://github.com/chayannaskar26/PaySim-Fraud-Detection" class="view-code">View Code On Github</a>
             </div>
-            <div class="steam-games-recommender my-20 first-item">
+            <div class="steam-games-recommender my-20">
                 <h3>Steam Games Recommender System</h3>
                 <p>An End to End recommender system for recommending user based on games they search for. This app uses Content Based recommendation techniques to properly recommmend games that are available to purchase from Steam site.</p>
                 <p>The data is self collected using steam api, whose code is also present in Github.</p>
