Update steam games rec sys link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="my-20 d-lg-none mobile-links">
                     <a href="https://github.com/chayannaskar26/Steam-Games_Recommender-System" class="view-code">View Code On Github</a>
-                    <a href="https://steam-games-recommender-system-00b1f6aec3ea.herokuapp.com/" class="view-code">View Code On Github</a>
+                    <a href="https://steam-games-recommender-system.onrender.com/" class="view-code">View App on Render</a>
                 </div>
                 <div class="project-img">
                     <div class="hover-links">
@@ -61,7 +61,7 @@
                             <i class="fa-brands fa-github"></i>
                             <span>View Code</span>
                         </a>
-                        <a href="https://steam-games-recommender-system-00b1f6aec3ea.herokuapp.com/">
+                        <a href="https://steam-games-recommender-system.onrender.com/">
                             <i class="fa-solid fa-eye"></i>
                             <span>Visit Site</span>
                         </a>
