--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
                 <img src="./static/images/Photo.png" alt="">
             </div>
             <p>I'm a passionate Web Analytics Engineer and Aspiring Data Scientist with a keen interest in deciphering the stories hidden within data. Armed with a Post Graduate Diploma in Data Science, I have dedicated my professional journey to harnessing the power of data to drive insightful decisions.</p>
-            <div class="follow">
-                <span>Follow Me on</span>
-                <a class="social-icon" href="https://github.com/chayannaskar26" ><i class="fa-brands fa-github"></i></a>
-                <a class="social-icon" href="mailto:chayannaskar@live.com" ><i class="fa-solid fa-at"></i></a>
-                <a class="social-icon" href="https://www.linkedin.com/in/chayannaskar26" ><i class="fa-brands fa-linkedin-in"></i></a>
+            <div class="link-wrapper">
+                <div class="follow">
+                    <span>Follow Me on</span>
+                    <a class="social-icon" target="_blank" href="https://github.com/chayannaskar26" ><i class="fa-brands fa-github"></i></a>
+                    <a class="social-icon" target="_blank" href="mailto:chayannaskar@live.com" ><i class="fa-solid fa-at"></i></a>
+                    <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/chayannaskar26" ><i class="fa-brands fa-linkedin-in"></i></a>
+                </div>
+                <div class="resume-link">
+                    <a target="_blank" href="./static/resume/Chayan_Naskar_Data_Science.pdf">Resume</a>
+                </div>
             </div>
         </section>
         <section class="projects">
@@ -37,7 +42,7 @@
                     <img src="./static/icons/seaborn.svg" alt="Seaborn" title="Seaborn">
                 </div>
 
-                <a href="https://github.com/chayannaskar26/PaySim-Fraud-Detection" class="view-code">View Code On Github</a>
+                <a target="_blank" href="https://github.com/chayannaskar26/PaySim-Fraud-Detection" class="view-code">View Code On Github</a>
             </div>
             <hr>
             <div class="steam-games-recommender my-20">
@@ -52,16 +57,16 @@
                     <img src="./static/icons/flask.svg" alt="Flask" title="Flask">
                 </div>
                 <div class="my-20 d-lg-none mobile-links">
-                    <a href="https://github.com/chayannaskar26/Steam-Games_Recommender-System" class="view-code">View Code On Github</a>
-                    <a href="https://steam-games-recommender-system.onrender.com/" class="view-code">View App on Render</a>
+                    <a target="_blank" href="https://github.com/chayannaskar26/Steam-Games_Recommender-System" class="view-code">View Code On Github</a>
+                    <a target="_blank" href="https://steam-games-recommender-system.onrender.com/" class="view-code">View App on Render</a>
                 </div>
                 <div class="project-img">
                     <div class="hover-links">
-                        <a href="https://github.com/chayannaskar26/Steam-Games_Recommender-System">
+                        <a target="_blank" href="https://github.com/chayannaskar26/Steam-Games_Recommender-System">
                             <i class="fa-brands fa-github"></i>
                             <span>View Code</span>
                         </a>
-                        <a href="https://steam-games-recommender-system.onrender.com/">
+                        <a target="_blank" href="https://steam-games-recommender-system.onrender.com/">
                             <i class="fa-solid fa-eye"></i>
                             <span>Visit Site</span>
                         </a>
@@ -81,7 +86,7 @@
                     <img src="./static/icons/dplyr.png" alt="dplyr" title="dplyr">
                 </div>
 
-                <a href="https://github.com/chayannaskar26/CredX_Acquisition" class="view-code">View Code On Github</a>
+                <a target="_blank" href="https://github.com/chayannaskar26/CredX_Acquisition" class="view-code">View Code On Github</a>
             </div>
         </section>
     </main>
